finishing student dan lecturers end point
